--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🍔 Da Família Lanches</title>
-
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Firebase v8 (compat com nosso JS) -->
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -24,11 +20,10 @@
         <p class="tagline">Aqui o sabor é de casa ❤️</p>
       </div>
     </div>
-    <!-- botão de login é injetado via JS (#user-btn) -->
   </header>
 
   <!-- Botão de carrinho -->
-  <button id="cart-icon" aria-label="Abrir carrinho">🛒 <span id="cart-count">0</span></button>
+  <button id="cart-icon">🛒 <span id="cart-count">0</span></button>
 
   <!-- ================= STATUS ================= -->
   <div id="status-banner" class="status-banner"></div>
@@ -41,130 +36,156 @@
     <h2>🔥 Promoções do Dia</h2>
     <p class="promo-sub">Aproveite antes que acabe!</p>
     <div class="countdown-ticker">
-      ⏳ Tempo restante: <span id="timer-2"></span>
+      ⏳ Tempo restante: <span id="timer"></span>
     </div>
 
-    <!-- Carrossel -->
     <div class="carousel">
-      <button class="c-btn c-prev" aria-label="Anterior">‹</button>
+      <button class="c-btn c-prev">‹</button>
       <div class="slides">
-        <img class="slide" src="promo1.jpg"
-             alt="Promoção 1"
-             data-wa="Promoção especial! 🍔 Combo Casal Trem por R$ 34,99!" />
-        <img class="slide" src="promo2.jpg"
-             alt="Promoção 2"
-             data-wa="Peça já o Combo Família Artesanal + Coca 2L por R$ 79,99!" />
-        <img class="slide" src="promo3.jpg"
-             alt="Promoção 3"
-             data-wa="4 Trembão + Fanta 1L por apenas R$ 59,99!" />
+        <img class="slide" src="promo1.jpg" data-wa="Promoção especial! 🍔 Combo Casal Trem por R$34,99!" />
+        <img class="slide" src="promo2.jpg" data-wa="Peça já o Combo Família Artesanal + Coca 2L por R$79,99!" />
+        <img class="slide" src="promo3.jpg" data-wa="4 Trembão + Fanta 1L por apenas R$59,99!" />
       </div>
-      <button class="c-btn c-next" aria-label="Próximo">›</button>
+      <button class="c-btn c-next">›</button>
     </div>
   </section>
 
   <!-- ================= MINI-CARRINHO ================= -->
-  <div id="cart-backdrop" aria-hidden="true"></div>
-  <aside id="mini-cart" class="mini-cart" aria-label="Carrinho">
+  <div id="cart-backdrop"></div>
+  <aside id="mini-cart" class="mini-cart">
     <div class="mini-head">
       <h3>🛍 Seu Pedido</h3>
-      <button class="cart-close" aria-label="Fechar carrinho">✖</button>
+      <button class="extras-close">✖</button>
     </div>
     <div class="mini-list"></div>
     <div class="mini-foot"></div>
   </aside>
 
-  <!-- ================= CARDÁPIO (Tradicionais) ================= -->
+  <!-- ================= CARDÁPIO ================= -->
   <section class="menu-section">
     <h2>🍔 Nossos Lanches Tradicionais</h2>
     <div class="grid">
-      <div class="card" data-name="Bão" data-price="14.99">
+
+      <div class="card" data-name="Bão" data-price="11.00">
         <h3>Bão <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 14,99</p>
+        <p class="desc">Pão, hambúrguer, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 11,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Uai" data-price="16.99">
+      <div class="card" data-name="Uai" data-price="13.00">
         <h3>Uai <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 16,99</p>
+        <p class="desc">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 13,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Trem" data-price="18.99">
+      <div class="card" data-name="Trem" data-price="14.00">
         <h3>Trem <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 18,99</p>
+        <p class="desc">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 14,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Cadim" data-price="19.99">
+      <div class="card" data-name="Cadim" data-price="17.00">
         <h3>Cadim <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 19,99</p>
+        <p class="desc">Pão, hambúrguer, filé de frango, bacon, milho, batata palha e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 17,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Armaria" data-price="21.99">
-        <h3>Armaria</h3>
-        <p class="price">R$ 21,99</p>
+      <div class="card" data-name="Armaria" data-price="18.00">
+        <h3>Armaria <span class="badge">Com Molho Verde</span></h3>
+        <p class="desc">Pão, 1 hambúrguer e 1 filé de frango, bacon, milho, batata palha e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 18,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Bitela" data-price="23.99">
-        <h3>Bitela</h3>
-        <p class="price">R$ 23,99</p>
+      <div class="card" data-name="Bitela" data-price="22.00">
+        <h3>Bitela <span class="badge">Com Molho Verde</span></h3>
+        <p class="desc">Pão, 2 hambúrgueres, filé de frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 22,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
 
-      <div class="card" data-name="Apruma" data-price="25.99">
-        <h3>Apruma</h3>
-        <p class="price">R$ 25,99</p>
+      <div class="card" data-name="Apruma" data-price="25.00">
+        <h3>Apruma <span class="badge">Com Molho Verde</span></h3>
+        <p class="desc">Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha e cheddar. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 25,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
+
+      <div class="card" data-name="Gradicido" data-price="28.00">
+        <h3>Gradicido <span class="badge">Com Molho Verde</span></h3>
+        <p class="desc">Pão, 3 hambúrgueres, filé de frango, bacon, ovo, 1 salsicha, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 28,00</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
+
+      <div class="card" data-name="Varadifome" data-price="30.00">
+        <h3>Varadifome <span class="badge">Com Molho Verde</span></h3>
+        <p class="desc">Pão, 4 hambúrgueres, filé de frango, bacon, ovo, cheddar, milho, batata palha, 2 salsichas, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 30,00</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
+      </div>
+
     </div>
   </section>
-
 <!-- ================= LANCHES ARTESANAIS ================= -->
   <section class="menu-section">
     <h2>🍔 Lanches Artesanais</h2>
     <div class="grid">
-      <div class="card" data-name="Peleja" data-price="27.99">
+      <div class="card" data-name="Peleja" data-price="26.00">
         <h3>Peleja</h3>
-        <p class="price">R$ 27,99</p>
+        <p class="desc">Pão, 1 hambúrguer artesanal, 1 filé de frango, bacon, milho, batata palha, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 26,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
-      <div class="card" data-name="Tudibom" data-price="29.99">
+
+      <div class="card" data-name="Tudibom" data-price="28.50">
         <h3>Tudibom</h3>
-        <p class="price">R$ 29,99</p>
+        <p class="desc">Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 28,50</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
         </div>
       </div>
-      <div class="card" data-name="Custoso" data-price="31.99">
+
+      <div class="card" data-name="Custoso" data-price="31.00">
         <h3>Custoso</h3>
-        <p class="price">R$ 31,99</p>
+        <p class="desc">Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 cheddars. Acompanha ketchup sachê.</p>
+        <p class="price">R$ 31,00</p>
         <div class="actions">
           <button class="add-cart">Adicionar</button>
           <button class="extras-btn">Adicionais</button>
@@ -289,13 +310,12 @@
       </div>
     </div>
   </section>
-
-  <!-- ============= MODAL ADICIONAIS ============= -->
-  <div id="extras-modal" class="modal" aria-hidden="true">
+<!-- ================= MODAL ADICIONAIS ================= -->
+  <div id="extras-modal" class="modal">
     <div class="modal-content">
       <div class="modal-head">
         <h3>Adicionais</h3>
-        <button class="extras-close" aria-label="Fechar">✖</button>
+        <button class="extras-close">✖</button>
       </div>
       <div id="extras-list" class="extras-list"></div>
       <div class="modal-foot">
@@ -304,18 +324,16 @@
     </div>
   </div>
 
-  <!-- =============== MODAL LOGIN =============== -->
-  <div id="login-modal" class="modal" aria-hidden="true">
+  <!-- ================= MODAL LOGIN ================= -->
+  <div id="login-modal" class="modal">
     <div class="modal-content login-box">
-      <button class="login-x" aria-label="Fechar">✖</button>
+      <button class="login-x">✖</button>
       <h3>👋 Bem-vindo(a)!</h3>
       <p>Entre ou cadastre-se para finalizar seu pedido.</p>
-      <div class="login-form">
-        <input type="email" id="login-email" placeholder="E-mail" />
-        <input type="password" id="login-senha" placeholder="Senha" />
-        <button class="btn-primario">Entrar / Cadastrar</button>
-      </div>
-      <div class="divider">ou</div>
+      <input type="email" id="login-email" placeholder="E-mail" />
+      <input type="password" id="login-senha" placeholder="Senha" />
+      <button class="btn-primario">Entrar / Cadastrar</button>
+      <hr />
       <button class="btn-google">🔐 Entrar com Google</button>
     </div>
   </div>
@@ -327,7 +345,7 @@
         <h3>Da Família Lanches</h3>
         <p>📍 Patos de Minas – MG</p>
         <p>📞 (34) 99717-8336</p>
-        <p>🕓 Seg–Qui: 18h às 23h15 • Sex–Dom: 17h às 23h30</p>
+        <p>🕓 Seg–Qui: 18h às 23h15 <br>Sex–Dom: 17h às 23h30</p>
       </div>
 
       <div class="footer-map">
