Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ================= CABEÇALHO ================= -->
   <header class="header">
     <div class="header-content">
-      <img src="imagens/logo-dfl.png" alt="Logo DFL" class="logo" />
+      <img src="logo-dfl.png" alt="Logo DFL" class="logo" />
       <div class="header-info">
         <h1>Da Família Lanches</h1>
         <p class="tagline">Aqui o sabor é de casa ❤️</p>
